--- a/SuggestionBank/SuggestionBank.csproj
+++ b/SuggestionBank/SuggestionBank.csproj
@@ -32,5 +32,11 @@
     <EmbeddedResource Update="View\CreateSuggestion.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="View\ListDepartments.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="View\ListSuggestions.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
