feat: add functions and database

--- a/SuggestionBank.Android/SuggestionBank.Android.csproj
+++ b/SuggestionBank.Android/SuggestionBank.Android.csproj
@@ -62,6 +62,7 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Helpers\DatabasePath.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
